v3 Lesson 13: IO layers (structure now, replay deferred)
Restructures the drivetrain onto an IO-layer boundary — ModuleIO/GyroIO
interfaces with default no-op methods, one hardware implementation
(ModuleIOTalonFX/GyroIOPigeon2), one sim implementation that extends the
hardware class to reuse Phoenix's simulated firmware (ModuleIOSim, plus a
standalone GyroIOSim), and a Constants.Mode enum with two switch
expressions picking between them, per corner, once at construction.

Per the already-established R1 team decision, this ships the full
structure while leaving actual replay deferred: REPLAY resolves to
anonymous new ModuleIO() {} / new GyroIO() {} instances, and each owning
class (SwerveModule, Drivetrain) logs its own Inputs fields manually via
SmartDashboard.putNumber in place of AdvantageKit's
@AutoLog/Logger.processInputs, which this framework doesn't support on
OpModeRobot yet.

Two things fell out of the restructuring that the old (RobotContainer-era)
lesson never needed:

- Drivetrain.simulatePeriodic() is deleted and Robot.simulationPeriodic()
  is emptied to {} — sim physics now runs as a side effect of which IO
  class got constructed, not a hand-rolled per-tick method call. This is a
  genuine consequence of Mechanism having no simulationPeriodic() hook of
  its own (carried since Lesson 4).
- Lesson 7's Try It 4 (named CAN ID/offset constants) finally gets wired
  into Drivetrain's module array, since rebuilding the array via a
  makeModule(...) helper touches every line anyway.

Verified with real DriverStationSim-backed tests, not just visual review:
getPose() reads exactly (0,0,0°) before the scheduler has ticked even
once (confirming the live-read-to-cached-read change in
getHeadingDegrees() is harmless); driving and turnToHeading both converge
through the full ModuleIOSim/GyroIOSim round trip once
DriverStationSim.setEnabled(true) is set (a real testing trap: Phoenix's
simulated motors output nothing while the robot reads as disabled,
matching the m